more cleanup for newer JDK versions